--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="container">
             <div class="row">
                 <div class="contact-left">
-                    <h1 class="sub-title">Contect Me</h1>
+                    <h1 class="sub-title">Contact Me</h1>
                     <P><i class="fa-regular fa-paper-plane"></i>flickermedia4@gmail.com</P>
                     <p><i class="fa-solid fa-phone"></i>+91 7354355632</p>
                     <p><i class="fa-solid fa-phone"></i>+91 9165376372</p>
